[gd_scene load_steps=17 format=3 uid="uid://dqncchs5hk006"]

[ext_resource type="Script" uid="uid://dsjugnsiyeabi" path="res://mainMenu.gd" id="1_83s16"]
[ext_resource type="Texture2D" uid="uid://70khruaajksd" path="res://images/main_menu.png" id="2_w7d22"]
[ext_resource type="Texture2D" uid="uid://be6i1i6kqlfbt" path="res://images/stackOfPaper.png" id="3_0ei6b"]
[ext_resource type="FontFile" uid="uid://b7vv6gahjxjce" path="res://assets/fonts/04b-30.ttf" id="3_fy5us"]
[ext_resource type="Texture2D" uid="uid://15i4h0ulkxij" path="res://images/SORTIE.png" id="4_hvu0j"]
[ext_resource type="FontFile" uid="uid://cmhlxw2ybg0ve" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="4_o0ref"]
[ext_resource type="Texture2D" uid="uid://d0lmc0j8wkugm" path="res://images/stackOfPaperhover.png" id="4_rdsan"]
[ext_resource type="Texture2D" uid="uid://cgsadr841qmbq" path="res://images/sortie sign pixel copy.png" id="5_hvu0j"]
[ext_resource type="Texture2D" uid="uid://c10lcymj13yjj" path="res://images/shoppingCart.png" id="9_rdsan"]
[ext_resource type="Texture2D" uid="uid://twjld6yqi152" path="res://images/shoppingcart hover.png" id="10_efmur"]
[ext_resource type="Texture2D" uid="uid://cx841mx5ijccq" path="res://coinpng.png" id="11_ltgao"]
[ext_resource type="Texture2D" uid="uid://tjwtet62nlkq" path="res://coinpng (1).png" id="12_7le7c"]
[ext_resource type="Texture2D" uid="uid://dnhs76bu3wva" path="res://coinpng (2).png" id="13_gfslc"]
[ext_resource type="AudioStream" uid="uid://bllwdblikhcle" path="res://assets/audio/bigSelect.wav" id="14_7le7c"]
[ext_resource type="AudioStream" uid="uid://beblf58whcphr" path="res://assets/audio/pickUpItem.wav" id="15_gfslc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_d23al"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ltgao")
}, {
"duration": 1.0,
"texture": ExtResource("12_7le7c")
}, {
"duration": 1.0,
"texture": ExtResource("13_gfslc")
}, {
"duration": 1.0,
"texture": ExtResource("13_gfslc")
}, {
"duration": 1.0,
"texture": ExtResource("13_gfslc")
}, {
"duration": 1.0,
"texture": ExtResource("12_7le7c")
}, {
"duration": 1.0,
"texture": ExtResource("11_ltgao")
}, {
"duration": 1.0,
"texture": ExtResource("11_ltgao")
}],
"loop": true,
"name": &"coinspin",
"speed": 6.0
}]

[node name="mainMenu" type="Node2D"]
script = ExtResource("1_83s16")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(960.056, 540.156)
scale = Vector2(11.9993, 11.9965)
texture = ExtResource("2_w7d22")

[node name="Label" type="Label" parent="."]
offset_left = 115.0
offset_top = 895.0
offset_right = 1804.0
offset_bottom = 1103.0
theme_override_colors/font_color = Color(0.719228, 0.0955382, 0.256972, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.462745)
theme_override_colors/font_outline_color = Color(0.512253, 0.0492422, 0.174064, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 30
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("3_fy5us")
theme_override_font_sizes/font_size = 152
text = "JEUX DE MOTS"

[node name="Cash" type="Label" parent="."]
offset_left = 423.0
offset_top = 48.0
offset_right = 565.0
offset_bottom = 155.0
theme_override_colors/font_color = Color(1, 0.717647, 0.0941176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_o0ref")
theme_override_font_sizes/font_size = 81
text = "0$"

[node name="startButton" type="TextureButton" parent="."]
offset_left = 668.0
offset_top = 578.0
offset_right = 881.0
offset_bottom = 738.0
texture_normal = ExtResource("3_0ei6b")
texture_hover = ExtResource("4_rdsan")
stretch_mode = 0

[node name="exitButton" type="TextureButton" parent="."]
offset_left = 1560.0
offset_top = 179.0
offset_right = 1883.0
offset_bottom = 314.0
texture_normal = ExtResource("4_hvu0j")
texture_hover = ExtResource("5_hvu0j")
stretch_mode = 5

[node name="storeButton" type="TextureButton" parent="."]
offset_left = 89.0
offset_top = 39.0
offset_right = 212.0
offset_bottom = 135.0
texture_normal = ExtResource("9_rdsan")
texture_hover = ExtResource("10_efmur")
stretch_mode = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
process_mode = 3
position = Vector2(340, 86)
scale = Vector2(7.78125, 6.92056)
sprite_frames = SubResource("SpriteFrames_d23al")
animation = &"coinspin"
frame_progress = 0.0885089

[node name="select sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_7le7c")

[node name="hover sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_gfslc")

[connection signal="mouse_entered" from="startButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="startButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="exitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="exitButton" to="." method="_on_exit_button_pressed"]
[connection signal="mouse_entered" from="storeButton" to="." method="_on_store_button_mouse_entered"]
[connection signal="pressed" from="storeButton" to="." method="_on_store_button_pressed"]
